<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="Cronograma"
        android:textColor="@color/soft_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <br.oficial.savestudents.ui_component.subtitleToggle.SubtitleToggleCustomView
        android:id="@+id/day_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:background_box="@drawable/bg_rounded_primary"
        app:layout_constraintEnd_toStartOf="@id/class_toggle"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:type="@string/day_toggle" />

    <br.oficial.savestudents.ui_component.subtitleToggle.SubtitleToggleCustomView
        android:id="@+id/class_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:background_box="@drawable/bg_rounded_ghost_white"
        app:layout_constraintEnd_toStartOf="@id/exam_toggle"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/day_toggle"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:type="@string/class_toggle" />

    <br.oficial.savestudents.ui_component.subtitleToggle.SubtitleToggleCustomView
        android:id="@+id/exam_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:background_box="@drawable/bg_rounded_red"
        app:layout_constraintEnd_toStartOf="@id/holiday_toggle"
        app:layout_constraintStart_toEndOf="@+id/class_toggle"
        app:layout_constraintTop_toTopOf="@id/class_toggle"
        app:type="@string/exam_toggle" />

    <br.oficial.savestudents.ui_component.subtitleToggle.SubtitleToggleCustomView
        android:id="@+id/holiday_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:background_box="@drawable/bg_rounded_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exam_toggle"
        app:layout_constraintTop_toTopOf="@id/exam_toggle"
        app:type="@string/holiday_toggle" />

</androidx.constraintlayout.widget.ConstraintLayout>