<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".debug_mode.view.activity.LoginActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/ic_login_woman"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/default_text_welcome"
        android:textColor="@color/secondary_800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/default_text_sub_title_login"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <br.com.savestudents.ui_component.simpleEditText.SimpleEditTextCustomView
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:hint="@string/email_hint"
        app:isPasswordEditText="false"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />

    <br.com.savestudents.ui_component.simpleEditText.SimpleEditTextCustomView
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:hint="@string/password_hint"
        app:isPasswordEditText="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

    <View
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bg_rounded_primary"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="Entrar"
        android:textColor="@color/soft_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button_submit"
        app:layout_constraintEnd_toEndOf="@id/button_submit"
        app:layout_constraintStart_toStartOf="@id/button_submit"
        app:layout_constraintTop_toTopOf="@id/button_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>