<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_woman_question"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/title_filter_options_error"
        android:textColor="@color/soft_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/subtitle_filter_options_error"
        android:textColor="@color/soft_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_transparent_with_border_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/button_filter_options_error"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintTop_toTopOf="@id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>