<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.FAQActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <View
            android:id="@+id/back_container"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_ripple_rounded_secondary_100"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_35"
            app:layout_constraintBottom_toBottomOf="@id/back_container"
            app:layout_constraintEnd_toStartOf="@id/back_text"
            app:layout_constraintStart_toStartOf="@id/back_container"
            app:layout_constraintTop_toTopOf="@id/back_container"
            app:tint="@color/primary" />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/back_button_text"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/back_container"
            app:layout_constraintStart_toEndOf="@id/back_icon"
            app:layout_constraintTop_toTopOf="@id/back_container" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/select_model_shift_list"
            android:src="@drawable/notification_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@id/separator"
            layout="@layout/separator_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_container" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/FAQ_save_students"
            android:textColor="@color/soft_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <include
            android:id="@+id/profile"
            layout="@layout/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/FAQ_save_students_text"
            android:textColor="@color/soft_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/FAQ_contact_title"
            android:textColor="@color/soft_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/email_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/default_text_email"
            android:textColor="@color/soft_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contacts" />

        <View
            android:id="@+id/email"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_chips_not_selected"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_description" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/gmail_icon"
            app:layout_constraintBottom_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toTopOf="@id/email" />

        <View
            android:id="@+id/wpp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_chips_not_selected"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            app:layout_constraintStart_toEndOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email_description" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/whatsapp_icon"
            app:layout_constraintBottom_toBottomOf="@id/wpp"
            app:layout_constraintEnd_toEndOf="@id/wpp"
            app:layout_constraintStart_toStartOf="@id/wpp"
            app:layout_constraintTop_toTopOf="@id/wpp" />

        <View
            android:id="@+id/linkedin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_chips_not_selected"
            android:clickable="true"
            android:focusable="true"
            android:padding="20dp"
            app:layout_constraintStart_toEndOf="@id/wpp"
            app:layout_constraintTop_toBottomOf="@id/email_description" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/linkedin_icon"
            app:layout_constraintBottom_toBottomOf="@id/linkedin"
            app:layout_constraintEnd_toEndOf="@id/linkedin"
            app:layout_constraintStart_toStartOf="@id/linkedin"
            app:layout_constraintTop_toTopOf="@id/linkedin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>