<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.TimelineSettingsActivity">

    <View
        android:id="@+id/back_container"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_ripple_rounded_secondary_100"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left_35"
        app:layout_constraintBottom_toBottomOf="@id/back_container"
        app:layout_constraintEnd_toStartOf="@id/back_text"
        app:layout_constraintStart_toStartOf="@id/back_container"
        app:layout_constraintTop_toTopOf="@id/back_container"
        app:tint="@color/primary" />

    <TextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/back_button_text"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/back_container"
        app:layout_constraintStart_toEndOf="@id/back_icon"
        app:layout_constraintTop_toTopOf="@id/back_container" />

    <TextView
        android:id="@+id/notification_enable_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/enabled_notification_title"
        android:textColor="@color/soft_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_container" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_enabled_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="true"
        android:theme="@style/checkbox_style"
        app:layout_constraintBottom_toBottomOf="@id/notification_enable_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notification_enable_title" />

    <TextView
        android:id="@+id/notification_enabled_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/enabled_notification_description"
        android:textColor="@color/gray_scale_400"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_enable_title" />

    <include
        android:id="@+id/separator"
        layout="@layout/separator_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/notification_enabled_description"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/notification_timeline_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Habilitar notificação dessa matéria"
        android:textColor="@color/soft_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_timeline_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:theme="@style/checkbox_style"
        app:layout_constraintBottom_toBottomOf="@id/notification_timeline_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notification_timeline_title" />

    <TextView
        android:id="@+id/notification_timeline_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="Ativando essa opção, você recebe notificações no seu celular todos os dias que tiver aula dessa matéria. Ative para não esquecer das provas :)"
        android:textColor="@color/gray_scale_400"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_timeline_title" />


</androidx.constraintlayout.widget.ConstraintLayout>